# prototypes

./: .gitignore  README.md  gen_readmes.py  generate_readmes.py
idea-hn-47229757-show-hn--truematch---ai-agents-match-you/: README.md  spec.md
idea-hn-47231795-show-hn--fileshot---zero-knowledge-file/: README.md  spec.md
idea-hn-47232676-show-hn--i-built-an-expense-tracker-wher/: README.md  spec.md
idea-hn-47237537-show-hn--spanish-words--spaced-repetitio/: README.md  app.json  package-lock.json  package.json  spec.md
idea-hn-47239604-show-hn--typeshim----net-webassembly-mee/: README.md  spec.md
idea-hn-47241821-tectonic-good-project-plan--please-read/: README.md  app.json  package-lock.json  package.json  spec.md
idea-hn-47246757-show-hn--m4bindr---convert-mp3-m4a-files/: README.md  (+4 more)
pipeline/: .last_scout  agentic_scraper.py  analyzer.py  config.py  daemon.py  db.py  digest.py  improver.py  main.py  notify.py  orchestrator.py  pyproject.toml  spec_writer.py
pipeline/builder/: audit.py  code_builder.py  improver.py  orchestrator.py  readme_backfill.py  readme_regen.py  reanalyze.py  spec_writer.py
pipeline/docs/plans/: 2026-03-15-agentic-pipeline.md
pipeline/docs/specs/: 2026-03-15-agentic-pipeline-design.md
pipeline/idea_scout/: agentic_scraper.py  analyzer.py  config.py  db.py  digest.py  improver.py  main.py  notify.py  orchestrator.py  page_fetcher.py  scraper.py  web_search.py
pipeline/tests/: test_agentic_scraper.py  test_analyzer.py  test_code_builder.py  test_db.py  test_db_v2.py  test_page_fetcher.py  test_scraper.py  test_web_search.py
(+4561 files in other folders)
