[project]
name = "idea-scout"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "ddgs>=7.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
idea-scout = "idea_scout.main:main"
prototype-builder = "builder.orchestrator:main"
pipeline-daemon = "daemon:main"
